# airouter

./: .env.example  .gitignore  .lefthook.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yml  start.sh  test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/adr/: 001-jwt-dual-secret.md  002-distributed-key-hashes.md  003-forced-password-change.md  004-structured-logging.md
docs/runbooks/: security_hardening.md
docs/superpowers/plans/: 2026-06-23-observability-hardening.md  2026-06-23-security-hardening.md
docs/superpowers/specs/: 2026-06-23-cicd-devops-design.md  2026-06-23-observability-hardening-design.md  2026-06-23-security-hardening-design.md
e2e/: debug.mjs  full-test.mjs  package-lock.json  package.json  test.mjs  wasm-test.mjs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
frontend-dist/: airouter-frontend-b9f4b312a2120041.js  airouter-frontend-b9f4b312a2120041_bg.wasm  index.html
frontend/public/: callback.html
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/api/: mod.rs
frontend/src/components/: badge.rs  button.rs  card.rs  metrics_cards.rs  mod.rs  modal.rs  provider_card.rs  provider_icon.rs  provider_status.rs  request_log.rs  sidebar.rs  skeleton.rs  tag_input.rs
frontend/src/pages/: analytics.rs  api_keys.rs  change_password.rs  dashboard.rs  login.rs  mod.rs  providers.rs  route_rules.rs  settings.rs
frontend/style/: input.css  main.css
migrations/: 001_initial.sql  002_oauth.sql  003_jwt_secrets.sql  004_password.sql
src/: lib.rs  logging.rs  main.rs  tracker.rs
src/api/: anthropic.rs  dashboard.rs  health.rs  mod.rs  openai.rs
src/api/auth/: mod.rs
src/api/dashboard/: api_keys.rs  helpers.rs  metrics.rs  mod.rs  providers.rs  rotate_jwt.rs  routes.rs  settings.rs  types.rs
src/api/oauth/: mod.rs
src/auth/: jwt.rs  jwt_secret_store.rs  key_store.rs  middleware.rs  mod.rs  password.rs
src/config/: db.rs  mod.rs  settings.rs
src/entities/: api_key.rs  jwt_secret.rs  mod.rs  provider.rs  provider_connection.rs  rate_limit_config.rs  route.rs  server_config.rs
src/oauth/: flow.rs  mod.rs  providers.rs  store.rs
src/provider/: anthropic.rs  category.rs  deepseek.rs  gemini.rs  grok_web.rs  groq.rs  mimo_free.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  opencode_free.rs  openrouter.rs  perplexity_web.rs  registry.rs  trait_def.rs
src/rate_limit/: mod.rs
src/router/: balancer.rs  core.rs  fusion.rs  mod.rs
src/server/: app.rs
src/streaming/: mod.rs
src/transform/: anthropic_to_openai.rs  mod.rs  openai_to_anthropic.rs
src/types/: anthropic.rs  openai.rs
tests/: integration_test.rs  proptest_transform.rs  security_hardening_test.rs
tests/common/: mod.rs
