[package]
name = "airouter-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = "0.6"
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["EventSource", "Response", "Window", "Headers"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = "0.6"
