[package]
name = "airouter-frontend"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["EventSource", "Response", "Window", "Headers", "Request", "RequestInit", "RequestMode"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
